# bios-bmc-smm-error-logger

./: .clang-tidy  MAINTAINERS  OWNERS  README.md  groups  main.cpp  meson.build  meson.options  meson_options.txt  project.config
include/: buffer.hpp  config.hpp  data_interface.hpp  pci_handler.hpp  rde_dictionary_manager.hpp  read_loop.hpp
include/dbus/: file_notifier.hpp
include/rde/: external_storer_file.hpp  external_storer_interface.hpp  notifier_dbus_handler.hpp  rde_dictionary_manager.hpp  rde_handler.hpp
internal/: meson.build  sys.cpp  sys.hpp
service_files/: meson.build  xyz.openbmc_project.bios_bmc_smm_error_logger.service.in
src/: buffer.cpp  config.cpp  fuzzer.cpp  main.cpp  meson.build  pci_handler.cpp  rde_dictionary_manager.cpp  read_loop.cpp
src/rde/: external_storer_file.cpp  meson.build  notifier_dbus_handler.cpp  rde_dictionary_manager.cpp  rde_handler.cpp
subprojects/: libbej.wrap  stdplus.wrap
test/: buffer_test.cpp  config_test.cpp  external_storer_file_test.cpp  meson.build  pci_handler_test.cpp  rde_dictionary_manager_test.cpp  rde_handler_test.cpp
test/include/: data_interface_mock.hpp  file_writer_mock.hpp  internal_sys_mock.hpp
